# nballerina-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  fun.ll
.github/ISSUE_TEMPLATE/: type_bug.md  type_improvement.md  type_new_feature.md  type_task.md
.github/workflows/: PRCheck.yml  WindowsWeeklyBuild.yml
BIR2llvmIR/: BIR.h  BIR2LLVMIRConvertor.cpp  BIR2LLVMIRConvertor.h  BIRReader.cpp  BIRReader.h  Makefile  README.md  driver.cpp  llvmAbstractInsnGen.cpp  llvmArrayLoadInsn.cpp  llvmArrayTypeInsn.cpp  llvmBIRLocation.cpp  llvmBIRNodeGen.cpp  llvmBasicBlockGen.cpp  llvmBinaryOpInsn.cpp  llvmConditionBrInsn.cpp  llvmConstantLoad.cpp  llvmConstantLoadInsn.cpp  llvmFuncParamGen.cpp  llvmFunctionCallInsn.cpp  llvmFunctionGen.cpp  llvmGoToInsn.cpp  llvmInvokableTypeGen.cpp  llvmMoveInsn.cpp  llvmNonTerminatorInsnGen.cpp  llvmOperandGen.cpp  llvmPackageGen.cpp  llvmPackageIDGen.cpp  llvmParamGen.cpp  llvmReturnInsn.cpp  llvmScopeEntryGen.cpp  llvmScopeGen.cpp  llvmSymbolGen.cpp  llvmTerminatorInsnGen.cpp  llvmTypeCastInsn.cpp  llvmTypeDeclGen.cpp  llvmTypeSymbolGen.cpp  llvmTypeTestInsn.cpp  llvmUnaryOpInsn.cpp  llvmVarDeclGen.cpp  (+4 more)
BIR2llvmIR/runtime/: lib.rs
common/: config.h.in
compiler/: BIR.h  BIR2LLVMIRConvertor.cpp  BIR2LLVMIRConvertor.h  BIRReader.cpp  BIRReader.h  CMakeLists.txt  Clang-tidy.cmake  Makefile  Misc.cmake  Sanitizers.cmake  driver.cpp  llvmAbstractInsnGen.cpp  llvmArrayLoadInsn.cpp  llvmArrayStoreInsn.cpp  llvmArrayTypeInsn.cpp  llvmBIRLocation.cpp  llvmBIRNodeGen.cpp  llvmBasicBlockGen.cpp  llvmBinaryOpInsn.cpp  llvmConditionBrInsn.cpp  llvmConstantLoadInsn.cpp  llvmFuncParamGen.cpp  llvmFunctionCallInsn.cpp  llvmFunctionGen.cpp  llvmGoToInsn.cpp  llvmInvokableTypeGen.cpp  llvmMap.cpp  llvmMoveInsn.cpp  llvmNonTerminatorInsnGen.cpp  llvmOperandGen.cpp  llvmPackageGen.cpp  llvmParamGen.cpp  llvmReturnInsn.cpp  llvmStructure.cpp  llvmStructureInsn.cpp  llvmTerminatorInsnGen.cpp  llvmTypeCastInsn.cpp  llvmTypeDeclGen.cpp  llvmTypeTestInsn.cpp  llvmUnaryOpInsn.cpp  (+3 more)
compiler/bir/: AbstractInstruction.cpp  BasicBlock.cpp  Function.cpp  InvocableType.cpp  Location.cpp  Package.cpp  Types.cpp
compiler/codegen/: AbstractInstruction.cpp  ArrayInsns.cpp  ArrayInsnsCodeGen.cpp  BalAbstractInsn.cpp  BalArray.cpp  BalBasicBlock.cpp  BalBinaryOpInsn.cpp  BalConditionBrInsn.cpp  BalConstantLoadInsn.cpp  BalFuncParam.cpp  BalFunction.cpp  BalFunctionCallInsn.cpp  BalGoToInsn.cpp  BalInstruction.cpp  BalInvokableType.cpp  BalLocation.cpp  BalMap.cpp  BalMoveInsn.cpp  BalNode.cpp  BalNonTerminatorInsn.cpp  BalOperand.cpp  BalPackage.cpp  BalParam.cpp  BalRestParam.cpp  BalReturnInsn.cpp  BalStructureInsn.cpp  BalTerminatorInsn.cpp  BalType.cpp  BalTypeCastInsn.cpp  BalTypeDecl.cpp  BalTypeTestInsn.cpp  BalUnaryOpInsn.cpp  BalVarDecl.cpp  BalVariable.cpp  BasicBlock.cpp  BasicBlockCodeGen.cpp  BinaryOpInsn.cpp  BinaryOpInsnCodeGen.cpp  CodeGenUtils.cpp  CodeGenerator.cpp  (+29 more)
compiler/include/: ArrayInstructions.h  BalAbstractInsn.h  BalArrayInsn.h  BalArrayInsns.h  BalBasicBlock.h  BalBinaryOpInsn.h  BalConditionBrInsn.h  BalConstantLoad.h  BalEnums.h  BalFuncParam.h  BalFunction.h  BalFunctionCallInsn.h  BalGoToInsn.h  BalInvokableType.h  BalLocation.h  BalMapInsns.h  BalMapStoreInsn.h  BalMoveInsn.h  BalNode.h  BalNonTerminatorInsn.h  BalOperand.h  BalPackage.h  BalParam.h  BalRestParam.h  BalReturnInsn.h  BalStructureInsn.h  BalTerminatorInsn.h  BalType.h  BalTypeCastInsn.h  BalTypeDecl.h  BalTypeDescInsn.h  BalTypeTestInsn.h  BalUnaryOpInsn.h  BalVarDecl.h  BalVariable.h  BasicBlock.h  BasicBlockCodeGen.h  BinaryOpInsn.h  CodeGenUtils.h  CodeGenerator.h  (+33 more)
compiler/include/bir/: ArrayInstructions.h  BasicBlock.h  BinaryOpInsn.h  ConditionBrInsn.h  ConstantLoad.h  Function.h  FunctionCallInsn.h  FunctionParam.h  GoToInsn.h  InvocableType.h  Location.h  MapInsns.h  MoveInsn.h  Operand.h  Package.h  RestParam.h  ReturnInsn.h  StructureInsn.h  TypeCastInsn.h  TypeDescInsn.h  TypeTestInsn.h  Types.h  UnaryOpInsn.h  Variable.h
compiler/include/codegen/: BasicBlockCodeGen.h  CodeGenUtils.h  CodeGenerator.h  FunctionCodeGen.h  InlinePregeneratedFunctions.h  NonTerminatorInsnCodeGen.h  PackageCodeGen.h  TerminatorInsnCodeGen.h
compiler/include/interfaces/: AbstractInstruction.h  AbstractVariable.h  BalAbstractInsn.h  Debuggable.h  Instruction.h  NonTerminatorInsn.h  PackageNode.h  Parser.h  TerminatorInsn.h  Translatable.h  VariableKind.h
compiler/include/reader/: BIRFileReader.h  BIRReadBasicBlock.h  BIRReadFunction.h  BIRReadInsns.h  BIRReadPackage.h  ConstantPool.h
compiler/reader/: BIRFileReader.cpp  BIRReadBasicBlock.cpp  BIRReadFunction.cpp  BIRReadInsns.cpp  BIRReadPackage.cpp  ConstantPool.cpp
runtime/: CMakeLists.txt  Cargo.toml  Makefile  lib.rs
runtime/c_rt/: CMakeLists.txt
runtime/c_rt/include/: balarray.h  balmap.h  common.h  gc.h  smtptr.h
runtime/c_rt/src/: balarray.c  balmap.c  lto.c  smtptr.c
runtime/c_rt/test/: main.c  main.cpp
runtime/common/: addx.ll  config.h.in
runtime/include/: .gitignore  ballerina_rt.h  nballerina_rt.h
runtime/interoptest/: test.cpp
runtime/rust_rt/: CMakeLists.txt  Cargo.toml
runtime/rust_rt/src/: bal_array.rs  lib.rs  type_checker.rs
runtime/src/: bal_array.rs  bal_error.rs  bal_map.rs  lib.rs  type_checker.rs
test/: CMakeLists.txt  check_lto.py  cov_test_launch.sh  lit.cfg.py  lit.site.cfg.py.in  run_lit_tests.py  testRunScript.bat  testRunScript.sh
test/any/: cast_any_basic_types.bal  cast_any_basic_types.bal.skip  cast_any_boolean.bal  cast_any_boolean_false.bal  cast_any_boolean_true.bal  cast_any_float.bal  cast_any_float.bal.skip  cast_any_int.bal  cast_global_any_int.bal  cast_int_to_any_and_any_to_int_with_balvalue.bal  function_call_any_boolean.bal  function_call_any_boolean.bal.skip  function_call_any_float.bal  function_call_any_float.bal.skip  function_call_any_int.bal  function_call_any_string.bal  function_call_any_string.bal.skip  function_call_global_any_int.bal  function_call_multiple_any_int.bal  return_any_basic_types.bal  return_any_basic_types.bal.skip
(+326 files in other folders)
