[package]
name = "nBallerinaRT"
version = "0.0.1"
authors = ["Ballerina Platform <ballerina-platform@wso2.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nballerinart"
crate-type = ["cdylib"]

[dependencies]
num = "0.3"
num-traits = "0.2"
num-derive = "0.3"
