[package]
name = "BallerinaRT"
version = "0.0.1"
authors = ["Ballerina <contact@ballerina.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ballerina_rt"
crate-type = ["cdylib"]

[dependencies]
num = "0.3"
num-traits = "0.2"
num-derive = "0.3"
